2014-09-24  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.6.0 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2014-09-19  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.5.90 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2014-09-17  Renato Nagy  <rnagy@inf.u-szeged.hu>

        [EFL][GTK] Remove WebKit1 related codes
        https://bugs.webkit.org/show_bug.cgi?id=136853

        Reviewed by Csaba Osztrogonác.

        Gtk and EFL WebKit1 ports no longer exist. Webkit1 related codes were deleted
        from scripts.

        * Source/PlatformGTK.cmake:

2014-09-16  Tibor Meszaros  <tmeszaros.u-szeged@partner.samsung.com>

        Fix FindICU.cmake
        https://bugs.webkit.org/show_bug.cgi?id=136820

        Reviewed by Csaba Osztrogonác.

        * Source/cmake/FindICU.cmake:

2014-09-15  Zan Dobersek  <zdobersek@igalia.com>

        [CMake] Remove FIND_PACKAGE_HANDLE_STANDARD_ARGS call for WAYLAND_EGL in FindWayland.cmake
        https://bugs.webkit.org/show_bug.cgi?id=136814

        Reviewed by Philippe Normand.

        * Source/cmake/FindWayland.cmake: This line was committed by mistake.
        We bundle the wayland-egl dependency with wayland-client and wayland-server
        and store the resulting variables with the WAYLAND_ prefix. Because of this
        this line wasn't exporting anything useful.

2014-09-12  Csaba Osztrogonác  <ossy@webkit.org>

        URTBF after r173574.

        * Source/cmake/WebKitMacros.cmake:

2014-09-11  László Langó  <llango.u-szeged@partner.samsung.com>

        [JavaScriptCore] Fix FTL on platform EFL.
        https://bugs.webkit.org/show_bug.cgi?id=133571

        Reviewed by Filip Pizlo.

        Revert r169181.

        * Source/cmake/FindLIBCXXABI.cmake: Removed.
        * Source/cmake/OptionsEfl.cmake:
