@@ -1,3 +1,13 @@
+2014-09-25  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [Gtk] build.sh needs a -- before make options when the build command is cmake --build
+        https://bugs.webkit.org/show_bug.cgi?id=136377
+
+        Reviewed by Philippe Normand.
+
+        * Scripts/webkitdirs.pm:
+        (buildCMakeGeneratedProject): Only use the build.sh script if it exists.
+
 2014-09-22  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Test /webkit2/WebKitWebView/can-show-mime-type fails if evince browser plugin is installed
